<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="meomobile.it.ilgruppatore.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/random1A"
        android:title="@string/random_1a"
        />
    <item
        android:id="@+id/random2A"
        android:title="@string/random_2a"
        />
    <item
        android:id="@+id/random4A"
        android:title="@string/random_4a"
        />
    <item
        android:id="@+id/random4B"
        android:title="@string/random_4b" />
    <!--<item
        android:id="@+id/random3E"
        android:title="Terza E"
        />
    <item
        android:id="@+id/random3F"
        android:title="Terza F" />-->
    <item
        android:id="@+id/action_share"
        android:title="Share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

</menu>
